# family-keeper

./: .env.example  .gitignore  DESIGN.md  PLAN.md  PRIVACY.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: alembic.ini  package.json  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 60222766b14a_create_users_and_refresh_tokens.py  94cc1709f720_add_google_auth_to_users.py  a2b3c4d5e6f7_create_families.py  b3c4d5e6f7g8_create_lists.py  c4d5e6f7g8h9_create_google_oauth_credentials.py  d5e6f7g8h9i0_create_push_subscriptions.py  e6f7g8h9i0j1_create_shared_calendars.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/core/: dependencies.py  permissions.py  pubsub.py  redis.py  security.py
apps/api/app/middleware/: rate_limit.py  security.py
apps/api/app/models/: __init__.py  family.py  family_list.py  family_member.py  google_oauth.py  invite_code.py  item_attachment.py  list_item.py  push_subscription.py  refresh_token.py  shared_calendar.py  user.py
apps/api/app/routers/: ai.py  auth.py  calendar.py  families.py  health.py  lists.py  push.py  users.py
apps/api/app/schemas/: __init__.py  ai.py  auth.py  calendar.py  family.py  lists.py  push.py  user.py
apps/api/app/services/: ai_service.py  auth_service.py  calendar_service.py  family_service.py  list_service.py  push_service.py  (+1 more)
apps/api/tests/: conftest.py  test_ai.py  test_attachments.py  test_auth.py  test_calendar.py  test_families.py  test_health.py  test_lists.py  test_push.py  test_security.py  test_users.py
(+78 files in other folders)
