[tool.poetry]
name = "family-keeper-api"
version = "0.1.0"
description = "Family Keeper API — FastAPI backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.30"
alembic = "^1.14"
pydantic = "^2.10"
pydantic-settings = "^2.7"
redis = {extras = ["asyncio"], version = "^5.2"}
python-jose = {extras = ["cryptography"], version = "^3.3"}
passlib = {extras = ["bcrypt"], version = "^1.7"}
python-multipart = "^0.0.20"
httpx = "^0.28"
greenlet = "^3.3.2"
email-validator = "^2.3.0"
bcrypt = "<4.2"
boto3 = "^1.42.61"
anthropic = "^0.42"
cryptography = "^44.0"
google-auth = "^2.37"
google-auth-oauthlib = "^1.2"
google-api-python-client = "^2.160"
pillow = "^12.1.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.54.0"}
pywebpush = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.24"
pytest-cov = "^6.0"
httpx = "^0.28"
factory-boy = "^3.3"
ruff = "^0.9"
aiosqlite = "^0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
